--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/house-of-style-logo-sm.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo64.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <!-- google font links -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Open+Sans&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">    <!-- react-video-css -->
+    <link href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&family=Open+Sans&family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet"> 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/house-of-style-logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
